* Fix sol.input.get_mouse_coordinates() (#734).
* Fix straight movement precision.
* Fix sword tapping sound still played when the game is suspended (#797).
* Fix custom_entity:set_can_traverse_ground() not working for some grounds (#794).
* Fix creating an entity with the same name as another one just removed (#795).

Lua API changes
---------------

Changes that introduce incompatibilities:

* Items with amount now have a default max amount of 1000 (#688).
* Fix map:get_entities() not returning the hero (#670).

Changes that do not introduce incompatibilities:

* Add a function sol.main.get_solarus_version() (#767).
* Add a function sol.main.get_quest_format().
* Add a function sol.main.get_type() (#744).
* Add a method map:get_num_layers() (#445).
* Add a method map:get_entities_by_type() (#796).
* Add a method map:get_entities_in_rectangle() (#142).
* Add methods map:set_world() and map:set_floor() (#656).
* map:get_entities() can now be called without parameter to get all entities.
* map:get_entities*() functions now give entities sorted in Z order (#779).
* entity:set_optimization_distance() is now only a hint for the engine.
* Add a method block:get_sprite().

Data files format changes
-------------------------

* Maps: New property num_layers (#445).
* Dialogs: Allow empty texts.

__________________________

Solarus 1.4.5 (2015-11-22)
__________________________

Bug fixes for the 1.4 release.

* Fix file name not shown when there is an error in dialogs file (#718).
* Fix saving special characters in data files (#719).
* Fix sol.main.load_file() returning a string instead of nil on error (#730).
* Fix performance issue when sprites have huge frame delays (#723).
* Fix collisions triggered for removed entities (#710).
* Fix hero disappearing if lifting animation has less than 5 frames (#682).
* Fix collisions with diagonal dynamic tiles larger than 8x8 (#486).
* Fix path finding movement not working with NPCs (#708).